--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,10 @@ body {
     transition: all 500ms ease-in-out;
 }
 
+::-webkit-scrollbar {
+    display: none;
+}
+
 .glass {
     position: absolute; /* Necessary for positioning the pseudo-element */
     isolation: isolate; /* Prevents pseudo-element from appearing above content */
